--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <section id="home" class="hero-section text-center bg-white border-bottom">
   <div class="cont d-flex flex-column align-items-center justify-content-center h-100">
-    <img src="C:\Users\Daven hart\Downloads\dj\dj-portfolio\img\475305461_1703826046849865_6587922509601931545_n.jpg" alt="DJ Balasangay" class="rounded-circle mb-4" width="200" height="200"/>
+    <img src="<img src="img\475305461_1703826046849865_6587922509601931545_n.jpg" alt="DJ Balasangay" class="rounded-circle mb-4" width="200" height="200"/>
     <h1 class="fw-bold display-3">DJ Balasangay</h1>
     <p class="text-muted fs-4">BSIT | 3rd Year | CICS</p>
   </div>
@@ -41,7 +41,7 @@
       </p>
     </div>
     <div class="col-md-5 text-center">
-      <img src="C:\Users\Daven hart\Downloads\dj\dj-portfolio\img\FB_IMG_1754873412611.jpg" alt="About Me" class="img-fluid rounded shadow" />
+      <img src="img\FB_IMG_1754873412611.jpg" alt="About Me" class="img-fluid rounded shadow" />
     </div>
   </div>
 </section>
@@ -50,7 +50,7 @@
 <section class="py-5 bg-light">
   <div class="cont d-flex flex-wrap align-items-center justify-content-between">
     <div class="col-md-5 text-center">
-      <img src="C:\Users\Daven hart\Downloads\dj\dj-portfolio\img\FB_IMG_1754873408396.jpg" alt="Immersion" class="img-fluid rounded" />
+      <img src="img\FB_IMG_1754873408396.jpg" alt="Immersion" class="img-fluid rounded" />
     </div>
     <div class="col-md-6 mb-4">
       <h4>Immersion</h4>
@@ -67,7 +67,7 @@
       <p>My CICS journey has been about growth, learning, and adapting...</p>
     </div>
     <div class="col-md-5 text-center">
-      <img src="C:\Users\Daven hart\Downloads\dj\dj-portfolio\img\received_675197918914420.jpeg" alt="CICS Life" class="img-fluid rounded" />
+      <img src="img\received_675197918914420.jpeg" alt="CICS Life" class="img-fluid rounded" />
     </div>
   </div>
 </section>
