--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <title>DJ Balasangay Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
-  
 </head>
 <body>
-
 
 <nav class="nav-top">
   <div class="cont">
@@ -20,37 +18,32 @@
   </div>
 </nav>
 
-
 <div id="top"></div>
 
 <section id="home" class="hero-section text-center bg-white border-bottom">
   <div class="cont d-flex flex-column align-items-center justify-content-center h-100">
-    <img src="<img src="img\475305461_1703826046849865_6587922509601931545_n.jpg" alt="DJ Balasangay" class="rounded-circle mb-4" width="200" height="200"/>
+    <img src="img/475305461_1703826046849865_6587922509601931545_n.jpg" alt="DJ Balasangay" class="rounded-circle mb-4" width="200" height="200"/>
     <h1 class="fw-bold display-3">DJ Balasangay</h1>
     <p class="text-muted fs-4">BSIT | 3rd Year | CICS</p>
   </div>
 </section>
-</header>
-
 
 <section class="py-5">
   <div class="cont d-flex flex-wrap align-items-center justify-content-between">
     <div class="col-md-6 mb-4">
       <h4>About Me</h4>
-      <p>Hi, I'm DJ Balasangay, a passionate and driven individual from Macanaya, Aparri, Cagayan...
-      </p>
+      <p>Hi, I'm DJ Balasangay, a passionate and driven individual from Macanaya, Aparri, Cagayan...</p>
     </div>
     <div class="col-md-5 text-center">
-      <img src="img\FB_IMG_1754873412611.jpg" alt="About Me" class="img-fluid rounded shadow" />
+      <img src="img/FB_IMG_1754873412611.jpg" alt="About Me" class="img-fluid rounded shadow" />
     </div>
   </div>
 </section>
 
-
 <section class="py-5 bg-light">
   <div class="cont d-flex flex-wrap align-items-center justify-content-between">
     <div class="col-md-5 text-center">
-      <img src="img\FB_IMG_1754873408396.jpg" alt="Immersion" class="img-fluid rounded" />
+      <img src="img/FB_IMG_1754873408396.jpg" alt="Immersion" class="img-fluid rounded" />
     </div>
     <div class="col-md-6 mb-4">
       <h4>Immersion</h4>
@@ -59,7 +52,6 @@
   </div>
 </section>
 
-
 <section class="py-5">
   <div class="cont d-flex flex-wrap align-items-center justify-content-between">
     <div class="col-md-6 mb-4">
@@ -67,7 +59,7 @@
       <p>My CICS journey has been about growth, learning, and adapting...</p>
     </div>
     <div class="col-md-5 text-center">
-      <img src="img\received_675197918914420.jpeg" alt="CICS Life" class="img-fluid rounded" />
+      <img src="img/received_675197918914420.jpeg" alt="CICS Life" class="img-fluid rounded" />
     </div>
   </div>
 </section>
@@ -78,7 +70,6 @@
   <p>General and professional skills</p>
   <p>Creative & Personal!</p> 
 </div>
-
 
 <div class="cont mt-5">
   <div class="row text-center">
@@ -96,15 +87,15 @@
       <p>Health Immersion completion</p>
       <p>College Dean's Lister</p>
       <p>Vice governor of the CICS 2024-2026</p>
-      <p>best in conduct</p>
-      <p>with honors elem-highschool</p>
+      <p>Best in conduct</p>
+      <p>With honors elem-highschool</p>
     </div>
     <div class="col-sm-4">
       <h3>Hobbies</h3>
       <p>Listening to music</p>
       <p>Chess</p>
       <p>Playing video games</p>
-      <p>sports like racket and ball games</p>
+      <p>Sports like racket and ball games</p>
     </div>
   </div>
 </div>
@@ -126,7 +117,6 @@
   </div>
 </section>
 
-
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 <section id="contact" class="py-5 text-center bg-light">
@@ -137,7 +127,6 @@
     <p>Facebook: DJ Balasangay</p>
   </div>
 </section>
-
 
 <footer class="text-center py-3">
   <div class="cont">
